--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-around" >
         <div class="container-fluid">
             <a class="navbar-brand" href="">
-                <img src="logoai.png" alt="" width="30" height="30" class="d-inline-block align-top">
+                <img src="logoaip.png" alt="" width="30" height="30" class="d-inline-block align-top">
                 Ali Imron
               </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
