--- a/stream/sunny.html
+++ b/stream/sunny.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="icon" type="image/png" href="logoai.png">
+    <link rel="icon" type="image/png" href="logoaip.png">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-around" >
         <div class="container-fluid text-center">
             <a class="navbar-brand" href="#">
-                <img src="logoai.png" alt="" width="30" height="30" class="d-inline-block align-top">
+                <img src="logoaip.png" alt="" width="30" height="30" class="d-inline-block align-top">
                 Ali Imron STREAM
               </a>
         </div>
