--- a/index.html
+++ b/index.html
@@ -78,6 +78,30 @@
         </div>
         <hr>
         <div class="container">
+          <div class="row text-center">
+            <h3 class="display-6" id="about">Skills</h3>
+          </div>
+          <div class="row">
+            <p class="lead">HTML</p>
+            <div class="progress" style="padding: 0;">
+              <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80%" aria-valuemin="0" aria-valuemax="100">80%</div>
+            </div>
+            <p class="lead">CSS</p>
+            <div class="progress" style="padding: 0;">
+              <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70%" aria-valuemin="0" aria-valuemax="100">70%</div>
+            </div>
+            <p class="lead">PHP</p>
+            <div class="progress" style="padding: 0;">
+              <div class="progress-bar" role="progressbar" style="width: 7%;" aria-valuenow="7%" aria-valuemin="0" aria-valuemax="100">7%</div>
+            </div>
+            <p class="lead">Java Script</p>
+            <div class="progress" style="padding: 0;">
+              <div class="progress-bar" role="progressbar" style="width: 1%;" aria-valuenow="1%" aria-valuemin="0" aria-valuemax="100">1%</div>
+            </div>
+          </div>
+        </div>
+        <hr>
+        <div class="container">
             <div class="row text-center">
                 <h3 class="display-6">Album</h3>
             </div>
