--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Blog</a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="amrron.000webhostapp.com">Smail</a></li>
+                      <li><a class="dropdown-item" href="https://amrron.000webhostapp.com">Smail</a></li>
                     </ul>
                   </li>
                 <li class="nav-item dropdown">
